--- a/test.yaml
+++ b/test.yaml
@@ -6,7 +6,7 @@ info:
     ## Example HTML:
     <div class="login-form">
       <div class="heading">
-        <h1>HTML Injection: Fake Login by @HACKERONE</h1>
+        <h1>HTML Injection: Fake Login </h1>
       </div>
       <div>
         <label for="username">Username</label> 
